syntax = "proto3";

package nodestatus;

import "google/protobuf/empty.proto";
import "api/cluster/v1/node.proto";


// NodeStatus is the node status service definition.
service NodeStatus {
  // Register registers a node.
  rpc Register(github.com.slok.ragnarok.api.cluster.v1.Node) returns (google.protobuf.Empty);
  // Heartbeat sends the current status of the node and receives 
  // the expected status that should have.
  rpc Heartbeat(github.com.slok.ragnarok.api.cluster.v1.Node) returns (google.protobuf.Empty);
}
